--- a/client/views/addclass.html
+++ b/client/views/addclass.html
@@ -29,7 +29,7 @@
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="category">Category</label>
-                <select class="form-control" id="category" required ng-model="addClassCtrl.class.category" ng-init="addClassCtrl.class.category = null">
+                <select class="form-control" id="category" name="category" required ng-model="addClassCtrl.class.category" ng-init="addClassCtrl.class.category = null">
                     <option ng-value="null" hidden>Category</option>
                     <option>Crossfit</option>
                     <option>Core</option>
@@ -93,7 +93,7 @@
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="category">Class Status</label>
-                <select class="form-control" id="status" required ng-model="addClassCtrl.class.status" ng-init="addClassCtrl.class.status = null">
+                <select class="form-control" id="status" name="status" required ng-model="addClassCtrl.class.status" ng-init="addClassCtrl.class.status = null">
                     <option ng-value="null" hidden>Status</option>
                     <option ng-value="1">Active</option>
                     <option ng-value="0">Unavailable</option>
@@ -115,8 +115,8 @@
         <div class="clearfix"></div>
 
         <br /><br />
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <div ng-show="addClassCtrl.message">{{ addClassCtrl.message }}</div>
-            </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div ng-show="addClassCtrl.message">{{ addClassCtrl.message }}</div>
+        </div>
     </div>
 </div>
