fixed database/sequelize timezone

--- a/client/views/addclass.html
+++ b/client/views/addclass.html
@@ -106,7 +106,7 @@
                 <button type="submit" class="btn btn-block btn-success add-new">Create New Class</button>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <button type="button" class="btn btn-block btn-danger" ui-sref="traindash({trainerId: addClassCtrl.class.creator_id})">Cancel</button>
+                <button type="button" class="btn btn-block btn-danger" ui-sref="traindash">Back to Dashboard</button>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <button type="button" class="btn btn-block btn-info" ng-show="addClassCtrl.message" ng-click="addClassCtrl.addAnother()">Add Another</button>
