--- a/client/views/viewclass.html
+++ b/client/views/viewclass.html
@@ -18,7 +18,7 @@
         <form name="viewClassForm" ng-submit="viewClassCtrl.updateClass()">
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="classname">Class Name</label>
-                <input class="form-control" id="classname" name="classname" type="text" placeholder="Class Name" ng-model="viewClassCtrl.class.name"/>
+                <input class="form-control" id="classname" name="classname" type="text" placeholder="Class Name" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.name"/>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="trainername">Trainer's Name</label>
@@ -27,12 +27,12 @@
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="details">Class Details</label>
                 <!-- <input class="form-control" id="details" name="details" type="text" placeholder="Class Details" readonly ng-model="viewClassCtrl.class.details"/> -->
-                <textarea form ="viewClassForm" class="form-control" id="details" name="details" rows="4" type="text" wrap="soft" placeholder="Add a description to make your class inviting and discoverable&#10;(e.g. An hour-long brutal X-fit workout to test the limits of your strength, speed and endurance)"  ng-model="viewClassCtrl.class.details"></textarea>
+                <textarea form ="viewClassForm" class="form-control" id="details" name="details" rows="4" type="text" wrap="soft" placeholder="Add a description to make your class inviting and discoverable&#10;(e.g. An hour-long brutal X-fit workout to test the limits of your strength, speed and endurance)"  ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.details"></textarea>
             </div>
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="category">Category</label>
-                <select class="form-control" id="category" name="category" type="text" placeholder="Category"  ng-model="viewClassCtrl.class.category">
+                <select class="form-control" id="category" name="category" type="text" placeholder="Category" ng-disabled="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.category">
                     <option>Crossfit</option>
                     <option>Core</option>
                     <option>Weights</option>
@@ -43,59 +43,59 @@
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="addrname">Name of Venue</label>
-                <input class="form-control" id="addrname" name="addrname" type="text" placeholder="Name of Location (e.g. Studio or Gym name)" ng-model="viewClassCtrl.class.addr_name"/>
+                <input class="form-control" id="addrname" name="addrname" type="text" placeholder="Name of Location (e.g. Studio or Gym name)" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.addr_name"/>
             </div>
 
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="address1">Address</label>
-                <input class="form-control" id="address1" name="address1" type="text" placeholder="Address line 1" ng-model="viewClassCtrl.class.address1"/>
+                <input class="form-control" id="address1" name="address1" type="text" placeholder="Address line 1" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.address1"/>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="address2">Address</label>
-                <input class="form-control" id="address2" name="address2" type="text" placeholder="Address line 2" ng-model="viewClassCtrl.class.address2"/>
+                <input class="form-control" id="address2" name="address2" type="text" placeholder="Address line 2" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.address2"/>
             </div>
 
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="postcode">Postal Code</label>
-                <input class="form-control" id="postcode" name="postcode" type="text" placeholder="Postal Code" ng-model="viewClassCtrl.class.postcode"/>
+                <input class="form-control" id="postcode" name="postcode" type="text" placeholder="Postal Code" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.postcode"/>
             </div>            
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="district">District</label>
-                <input class="form-control" id="neighbourhood" name="neighbourhood" type="text" placeholder="District or neighbourhood (e.g. Bedok, Tampines)" ng-model="viewClassCtrl.class.neighbourhood"/>
+                <input class="form-control" id="neighbourhood" name="neighbourhood" type="text" placeholder="District or neighbourhood (e.g. Bedok, Tampines)" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.neighbourhood"/>
             </div>
 
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="datetime">Date and Time of Class</label>
                 <div>
-                <input class="form-control" id='datetimepicker2' name="datetimepicker2" type="text" datetimez="datePickerOptions" ng-model="viewClassCtrl.class.start_time"/>
+                <input class="form-control" id='datetimepicker2' name="datetimepicker2" type="text" datetimez="datePickerOptions" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.start_time"/>
                 </div>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="duration">Duration of Class (in minutes)</label>
-                <input class="form-control" id="duration" name="duration" type="number" min="30" max="180" ng-model="viewClassCtrl.class.duration"/>
+                <input class="form-control" id="duration" name="duration" type="number" min="30" max="180" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.duration"/>
             </div>
 
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="minsize">Minimum Class Size</label>
-                <input class="form-control" id="minsize" name="minsize" type="number" min="1" max="100" ng-model="viewClassCtrl.class.minsize"/>
+                <input class="form-control" id="minsize" name="minsize" type="number" min="1" max="100" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.minsize"/>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="maxsize">Maximum Class Size</label>
-                <input class="form-control" id="maxsize" name="maxsize" type="number" min="1" max="100" ng-model="viewClassCtrl.class.maxsize"/>
+                <input class="form-control" id="maxsize" name="maxsize" type="number" min="1" max="100" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.maxsize"/>
             </div>
 
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="remarks">Remarks</label>
-                <textarea class="form-control" rows="5" id="instructions" name="instructions" type="text" wrap="soft" placeholder="Remarks (e.g. Bring your own towel, or Ask your doctor if there are any precautions you should take)"  ng-model="viewClassCtrl.class.instructions"></textarea>
+                <textarea class="form-control" rows="5" id="instructions" name="instructions" type="text" wrap="soft" placeholder="Remarks (e.g. Bring your own towel, or Ask your doctor if there are any precautions you should take)"  ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.instructions"></textarea>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="category">Class Status</label>
-                <select class="form-control" id="status" name="status" ng-model="viewClassCtrl.class.status">
+                <select class="form-control" id="status" name="status" ng-disabled="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.status">
                     <option ng-value="1">Active</option>
                     <option ng-value="0">Unavailable</option>
                     <option ng-value="2">Inactive</option>
