Profile page to retrieve logged in user

--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -81,7 +81,7 @@
                     <div class="col-md-8">
                             <!-- <a class='btn btn-success btn-xs' href="#" ng-click="listCtrl.saveUser()"> Save</a> -->
                             <button type="button" class='btn btn-success btn-xs' ng-click="profileCtrl.saveUser()">Save</button>
-                            <a class='btn btn-info btn-xs' ui-sref="list"> Cancel</a>
+                            <a class='btn btn-info btn-xs' ng-click="profileCtrl.cancel()""> Cancel</a>
                             <!-- <button type="button" class="btn btn-danger btn-xs" ng-click="profileCtrl.deleteUser()">Delete</button> -->
                             
                             <!-- <a class="btn btn-danger btn-xs" href="#"  ng-click="profileCtrl.deleteUser()"> Delete</a></td> -->
