--- a/client/views/trainerdash.html
+++ b/client/views/trainerdash.html
@@ -25,6 +25,9 @@
                         <button class="btn btn-success usrsrchbtn" type="submit">
                             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                         </button>
+                        <button class="btn btn-danger usrsrchbtn" type="button" ng-click="trainerDashCtrl.resetSearch()">
+                            <span class="glyphicon glyphicon-flash" aria-hidden="true"></span>
+                        </button>
                     </span>
                 </div>
             </div>
