--- a/client/views/viewclass.html
+++ b/client/views/viewclass.html
@@ -68,9 +68,12 @@
 
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label for="datetime">Date and Time of Class</label>
-                <div>
-                <input class="form-control" id='datetimepicker2' name="datetimepicker2" type="text" datetimez="datePickerOptions" ng-model="viewClassCtrl.class.start_time"/>
+                <label for="datetime">Date and Start Time</label>
+                <div class='input-group date' id='start_time'>
+                    <input type="text" class="form-control" angulardtp ng-model="viewClassCtrl.class.start_time"/>
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
                 </div>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
