--- a/client/views/clientdash.html
+++ b/client/views/clientdash.html
@@ -14,33 +14,48 @@
 
 <div class="container-fluid"></div>
       <!-- Search Form -->
-      <form role="form" class="usrsrch">
+      <form role="form" class="usrsrch" ng-click="clientDashCtrl.getAllClasses()">
       
       <!-- Search Field -->
           <div class="row">
               <div class="form-group">
-                  <div class="input-group col-md-12">
-                      <input class="form-control usrscrhfrm" id="searchString" type="text" name="searchString" ng-model = "classesCtrl.keyword" placeholder="Search for a class" />
-                      <span class="input-group-btn">
-                          <button class="btn btn-success usrsrchbtn" type="submit"><span class="glyphicon glyphicon-search" aria-hidden="true"></button>
-                      </span>
-                      </span>
-                  </div>
+                    <div class="input-group col-md-12">
+                        <input class="form-control usrscrhfrm" id="searchString" type="text" name="searchString" ng-model = "clientDashCtrl.keyword" placeholder="Search for a class" />
+                        <span class="input-group-btn">
+                                <button class="btn btn-success usrsrchbtn" type="submit">
+                                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                                    </button>
+                                    <button class="btn btn-danger usrsrchbtn" type="button" ng-click="clientDashCtrl.resetSearch()">
+                                        <span class="glyphicon glyphicon-flash" aria-hidden="true"></span>
+                                    </button>
+                        </span>
+                    </div>
               </div>
           </div>
           
       </form>
       <!-- End of Search Form -->
 
+
+    <div class="container-fluid">
+        <button class="btn btn-default btn-xs pull-right btn-filter" type="submit" ng-click="clientDashCtrl.core()">Core</button>
+        <button class="btn btn-info btn-xs pull-right btn-filter" type="submit" ng-click="clientDashCtrl.weights()">Weights</button>
+        <button class="btn btn-success btn-xs pull-right btn-filter" type="submit" ng-click="clientDashCtrl.MMA()">MMA</button>
+        <button class="btn btn-warning btn-xs pull-right btn-filter" type="submit" ng-click="clientDashCtrl.aerobics()">Aerobics</button>
+        <button class="btn btn-primary btn-xs pull-right btn-filter" type="submit" ng-click="clientDashCtrl.boxing()">Boxing</button>
+        <button class="btn btn-danger btn-xs pull-right btn-filter" type="submit" ng-click="clientDashCtrl.crossfit()">Crossfit</button>
+    </div>
+
       <div class="row" ng-repeat="class in clientDashCtrl.classes">
-          <div class="panel panel-primary trainer-panel">
+        
+            <div class="panel panel-primary trainer-panel">
               <div class="panel-heading">
                   <div class="row">
                       <div class="col-lg-6">
                           <b>{{class.name}}</b>
                       </div>
                       <div class="col-lg-6">
-                          <button type="button" class="btn btn-success btn-xs pull-right" ng-click="clientDashCtrl.viewClass(class.id)"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
+                          <button type="button" class="btn btn-default btn-xs pull-right" ng-click="clientDashCtrl.viewClass(class.id)"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
                       </div>
                   </div>
               </div>
