fix addnewclass, added book a class

--- a/client/views/clientreg.html
+++ b/client/views/clientreg.html
@@ -49,6 +49,7 @@
             </div>
 
             <div class="row">
+                <button type="button" class="btn btn-success sign-in pull-left" ui-sref="login">Log In</button>    
                 <button type="submit" class="btn btn-primary sign-in pull-right">Register</button>
             </div>
         </form>
