--- a/client/views/viewclass.html
+++ b/client/views/viewclass.html
@@ -118,8 +118,8 @@
                 ng-click="viewClassCtrl.deleteClass()">Delete</button>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <button type="button" class="btn btn-block btn-danger" ng-show="viewClassCtrl.user.role==2"
-                ng-click="viewClassCtrl.cancelBooking()">Cancel Booking</button>
+                <button type="button" class="btn btn-block btn-success" ng-show="viewClassCtrl.user.role==2"
+                ng-click="viewClassCtrl.bookClass()">Book This Class</button>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                 <button type="button" class="btn btn-block btn-info" ng-click="viewClassCtrl.cancel()">Back to Dashboard</button>
