--- a/client/views/addclass.html
+++ b/client/views/addclass.html
@@ -15,7 +15,7 @@
       
 <div class="container">
     <div class="row">
-        <form name="addClassForm" ng-submit="addClassCtrl.addClass()">
+        <form name="addClassForm" #addClassForm="ngForm" ng-submit="addClassCtrl.addClass()">
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="classname">Class Name</label>
                 <input class="form-control" id="classname" name="classname" type="text" placeholder="Class Name" required ng-model="addClassCtrl.class.name"/>
