Tidied up client and trainer registration

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -260,6 +260,19 @@ hr.style14 {
 }
 
 /* ---------------------------------------------------
+    CLIENT / TRAINER REGISTRATION
+----------------------------------------------------- */
+
+.ctreglogbtn {
+    width: 100px;
+    margin-left: 14px;
+}
+
+.ctregregbtn {
+    width: 100px;
+}
+
+/* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
 #content {
