--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -63,9 +63,9 @@
                     <div class="col-md-8">
                         <select class="form-control" id="status" required ng-model="profileCtrl.user.status">
                             <option id="header" ng-value="null">Choose One</option>
-                            <option ng-value="1">Active</option>
-                            <option ng-value="0">Unavailable</option>
-                            <option ng-value="2">Inactive</option>
+                            <option ng-value="Active">Active</option>
+                            <option ng-value="Inactive">Inactive</option>
+                            <option ng-value="Unavailable">Unavailable</option>
                         </select>
                     </div>
                 </div>
