--- a/client/views/trainerdash.html
+++ b/client/views/trainerdash.html
@@ -9,6 +9,7 @@
 </nav>
 
 <div>
+    <h3 class="sah4">Manage Your Classes</h3>
     <h4 class="sah4">Trainer Panel</h4>
 </div>
 
@@ -58,6 +59,9 @@
             </div>
             <div class="panel-body">
                 <div class="row">
+                    <div class="col-lg-4">
+                        <b>Details:</b> {{class.details}}
+                    </div>
                     <div class="col-lg-4">
                         <b>Date/Time:</b> {{class.start_time}}
                     </div>
