--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -407,6 +407,7 @@ hr.style14 {
 ----------------------------------------------------- */
 
 .btn-filter {
+    width: 80px;
     margin-right: -15px;
     margin-left: 25px;
     margin-top: 10px;
