--- a/client/views/addclass.html
+++ b/client/views/addclass.html
@@ -30,7 +30,7 @@
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="category">Category</label>
                 <select class="form-control" id="category" name="category" required ng-model="addClassCtrl.class.category" ng-init="addClassCtrl.class.category = null">
-                    <option ng-value="null" hidden>Category</option>
+                    <option ng-value="null" hidden>Select a Category</option>
                     <option>Crossfit</option>
                     <option>Core</option>
                     <option>Weights</option>
@@ -106,10 +106,10 @@
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="category">Class Status</label>
                 <select class="form-control" id="status" name="status" required ng-model="addClassCtrl.class.status" ng-init="addClassCtrl.class.status = null">
-                    <option ng-value="null" hidden>Status</option>
-                    <option ng-value="1">Active</option>
-                    <option ng-value="0">Unavailable</option>
-                    <option ng-value="2">Inactive</option>
+                    <option ng-value="null" hidden>Choose Class Status</option>>
+                    <option>Active</option>
+                    <option>Unavailable</option>
+                    <option>Inactive</option>
                 </select>
             </div>
 
