--- a/client/views/adduser.html
+++ b/client/views/adduser.html
@@ -51,9 +51,9 @@
     <div class="form-group">
         <select class="form-control" id="status" required ng-model="addUserCtrl.user.status" ng-init="addUserCtrl.user.status = null">
                         <option ng-value="null" hidden>Status</option>
-                        <option ng-value="1">Active</option>
-                        <option ng-value="0">Unavailable</option>
-                        <option ng-value="2">Inactive</option>
+                        <option ng-value="Active">Active</option>
+                        <option ng-value="Unavailable">Unavailable</option>
+                        <option ng-value="Inactive">Inactive</option>
                 </select>
     </div>
 
