--- a/client/views/viewclass.html
+++ b/client/views/viewclass.html
@@ -99,9 +99,9 @@
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="category">Class Status</label>
                 <select class="form-control" id="status" name="status" ng-disabled="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.status">
-                    <option ng-value="1">Active</option>
-                    <option ng-value="0">Unavailable</option>
-                    <option ng-value="2">Inactive</option>
+                    <option>Active</option>
+                    <option>Unavailable</option>
+                    <option>Inactive</option>
                 </select>
             </div>
             <div class="clearfix"></div>
