--- a/client/views/addclass.html
+++ b/client/views/addclass.html
@@ -21,6 +21,11 @@
                 <input class="form-control" id="classname" name="classname" type="text" placeholder="Class Name" required ng-model="addClassCtrl.class.name"/>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <label for="trainername">Trainer's Name</label>
+                <input class="form-control" id="trainername" name="trainername" type="text" readonly placeholder="Trainer's Name" ng-model="addClassCtrl.user.firstname"/>
+            </div>
+            <div class="clearfix"></div>
+            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <label for="details">Class Details</label>
                 <!-- <input class="form-control" id="details" name="details" type="textarea" placeholder="Class Details" required ng-model="addClassCtrl.class.details"> -->
                 <textarea form ="addClassForm" class="form-control" id="details" name="details" rows="4" type="text" wrap="soft" placeholder="Add a description to make your class inviting and discoverable&#10;(e.g. An hour-long brutal X-fit workout to test the limits of your strength, speed and endurance)" required ng-model="addClassCtrl.class.details"></textarea>
@@ -50,7 +55,7 @@
                 <input class="form-control" id="address1" name="address1" type="text" placeholder="Address line 1" required ng-model="addClassCtrl.class.address1"/>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label for="address2">Address</label>
+                <label for="address2">Address 2</label>
                 <input class="form-control" id="address2" name="address2" type="text" placeholder="Address line 2" ng-model="addClassCtrl.class.address2"/>
             </div>
 
@@ -89,21 +94,15 @@
             </div>
 
             <div class="clearfix"></div>
-            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <div class="form-group col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <label for="minsize">Minimum Class Size</label>
                 <input class="form-control" id="minsize" name="minsize" type="number" ng-init="addClassCtrl.class.minsize=1" min="1" max="100" required ng-model="addClassCtrl.class.minsize"/>
             </div>
-            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <div class="form-group col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <label for="maxsize">Maximum Class Size</label>
                 <input class="form-control" id="maxsize" name="maxsize" type="number" ng-init="addClassCtrl.class.maxsize=1" min="1" max="100" required ng-model="addClassCtrl.class.maxsize"/>
             </div>
-
-            <div class="clearfix"></div>
-            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label for="remarks">Remarks</label>
-                <textarea class="form-control" rows="5" id="instructions" name="instructions" type="text" wrap="soft" placeholder="Remarks (e.g. Bring your own towel, or Ask your doctor if there are any precautions you should take)" ng-model="addClassCtrl.class.instructions"></textarea>
-            </div>
-            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <div class="form-group col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <label for="category">Class Status</label>
                 <select class="form-control" id="status" name="status" required ng-model="addClassCtrl.class.status" ng-init="addClassCtrl.class.status = null">
                     <option ng-value="null" hidden>Choose Class Status</option>>
@@ -112,6 +111,12 @@
                     <option>Inactive</option>
                 </select>
             </div>
+            <div class="clearfix"></div>
+            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <label for="remarks">Remarks</label>
+                <textarea class="form-control" rows="5" id="instructions" name="instructions" type="text" wrap="soft" placeholder="Remarks (e.g. Bring your own towel, or Ask your doctor if there are any precautions you should take)" ng-model="addClassCtrl.class.instructions"></textarea>
+            </div>
+            
 
             <div class="clearfix"></div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
