--- a/client/views/viewclass.html
+++ b/client/views/viewclass.html
@@ -24,12 +24,13 @@
                 <label for="trainername">Trainer's Name</label>
                 <input class="form-control" id="trainername" name="trainername" type="text" readonly placeholder="Trainer's Name" ng-model="viewClassCtrl.class.person.firstname"/>
             </div>
-            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <div class="clearfix"></div>
+            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <label for="details">Class Details</label>
                 <!-- <input class="form-control" id="details" name="details" type="text" placeholder="Class Details" readonly ng-model="viewClassCtrl.class.details"/> -->
                 <textarea form ="viewClassForm" class="form-control" id="details" name="details" rows="4" type="text" wrap="soft" placeholder="Add a description to make your class inviting and discoverable&#10;(e.g. An hour-long brutal X-fit workout to test the limits of your strength, speed and endurance)"  ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.details"></textarea>
             </div>
-            <div class="clearfix"></div>
+            <div class="clearfix"></div> 
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="category">Category</label>
                 <select class="form-control" id="category" name="category" type="text" placeholder="Category" ng-disabled="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.category">
@@ -52,7 +53,7 @@
                 <input class="form-control" id="address1" name="address1" type="text" placeholder="Address line 1" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.address1"/>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label for="address2">Address</label>
+                <label for="address2">Address 2</label>
                 <input class="form-control" id="address2" name="address2" type="text" placeholder="Address line 2" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.address2"/>
             </div>
 
@@ -82,21 +83,15 @@
             </div>
 
             <div class="clearfix"></div>
-            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <div class="form-group col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <label for="minsize">Minimum Class Size</label>
                 <input class="form-control" id="minsize" name="minsize" type="number" min="1" max="100" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.minsize"/>
             </div>
-            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <div class="form-group col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <label for="maxsize">Maximum Class Size</label>
                 <input class="form-control" id="maxsize" name="maxsize" type="number" min="1" max="100" ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.maxsize"/>
             </div>
-
-            <div class="clearfix"></div>
-            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label for="remarks">Remarks</label>
-                <textarea class="form-control" rows="5" id="instructions" name="instructions" type="text" wrap="soft" placeholder="Remarks (e.g. Bring your own towel, or Ask your doctor if there are any precautions you should take)"  ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.instructions"></textarea>
-            </div>
-            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <div class="form-group col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <label for="category">Class Status</label>
                 <select class="form-control" id="status" name="status" ng-disabled="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.status">
                     <option>Active</option>
@@ -104,6 +99,12 @@
                     <option>Inactive</option>
                 </select>
             </div>
+            <div class="clearfix"></div>
+            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <label for="remarks">Remarks</label>
+                <textarea class="form-control" rows="5" id="instructions" name="instructions" type="text" wrap="soft" placeholder="Remarks (e.g. Bring your own towel, or Ask your doctor if there are any precautions you should take)"  ng-readonly="viewClassCtrl.user.role == 2" ng-model="viewClassCtrl.class.instructions"></textarea>
+            </div>
+            
             <div class="clearfix"></div>
             <!-- 4 buttons here, displayed based on role
             if role=trainer, show 'Save' and 'Delete'
@@ -115,7 +116,7 @@
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                 <button type="button" class="btn btn-block btn-danger"
                 ng-show="viewClassCtrl.user.role==1"
-                ng-click="viewClassCtrl.deleteClass()">Delete</button>
+                ng-click="viewClassCtrl.deleteClass()">Delete Class</button>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                 <button type="button" class="btn btn-block btn-success" ng-show="viewClassCtrl.user.role==2"
