--- a/client/views/trainerdash.html
+++ b/client/views/trainerdash.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
 
         <div class="navbar-header nav navbar-nav navbar-left">
-            <h3>Welcome, {{trainerDashCtrl.user.firstname}}</h3>
+            <h3>Welcome, {{trainerDashCtrl.user.firstname}} {{trainerDashCtrl.user.lastname}}</h3>
         </div>
 
     </div>
