--- a/client/views/addclass.html
+++ b/client/views/addclass.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
     
         <div class="navbar-header nav navbar-nav navbar-left">
-            <h3>Welcome, {{addClassCtrl.user.firstname}}</h3>
+            <h3>Welcome, {{addClassCtrl.user.firstname}} {{addClassCtrl.user.lastname}}</h3>
         </div>
     
     </div>
