--- a/client/views/mybookings.html
+++ b/client/views/mybookings.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header nav navbar-nav navbar-left">
-            <h3>Welcome, {{clientDashCtrl.user.firstname}}</h3>
+            <h3>Welcome, {{clientDashCtrl.user.firstname}} {{clientDashCtrl.user.lastname}}</h3>
         </div>
     </div>
 </nav>
